--- a/src/app/dashboard/twitch/hypetrain/hypetrain.component.scss
+++ b/src/app/dashboard/twitch/hypetrain/hypetrain.component.scss
@@ -16,3 +16,68 @@
   justify-content: center;
   align-items: center;
 }
+
+nb-card-body > h2 {
+  text-align: center;
+}
+
+.test {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.audio,
+.train,
+.locomotive,
+.carriage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  > div {
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+  }
+
+  > .pictures {
+    align-items: flex-start;
+    gap: 4rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    > .pictures-column {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      align-items: center;
+      > .pictures-row {
+        display: flex;
+        gap: 2.5rem;
+        justify-content: center;
+        align-items: center;
+      }
+
+      > .pictures-uploader {
+        position: relative;
+        > button {
+          position: absolute;
+          right: -1rem;
+          bottom: -1rem;
+          z-index: 4;
+        }
+      }
+    }
+  }
+}
+
+.monitor {
+  margin-top: 2rem;
+}
+.monitor,
+.test,
+.audio,
+.train {
+  margin-bottom: 5rem;
+}
