--- a/src/app/dashboard/twitch/hypetrain/hypetrain.component.html
+++ b/src/app/dashboard/twitch/hypetrain/hypetrain.component.html
@@ -36,27 +36,49 @@
         <h2>TEST</h2>
         <div class="test">
           <button nbButton status="success" (click)="hypetrain.testStart()" [disabled]="hypetrain.currentLevel > 0">START TRAIN</button>
-          <button nbButton status="warning" (click)="hypetrain.testAddCarriage()" [disabled]="hypetrain.currentLevel === 0 || hypetrain.ending">ADD CARRIAGE</button>
+          <button nbButton status="basic" (click)="hypetrain.testAddCarriage()" [disabled]="hypetrain.currentLevel === 0 || hypetrain.ending">ADD CARRIAGE</button>
           <button
-            nbButton
-            status="PRIMARY"
-            [disabled]="hypetrain.currentLevel === 0 || hypetrain.currentLevel === 5 || hypetrain.ending"
             (click)="hypetrain.testChangeLevel(hypetrain.currentLevel + 1)"
+            [disabled]="hypetrain.currentLevel === 0 || hypetrain.currentLevel === 5 || hypetrain.ending"
+            nbButton
+            status="primary"
           >
-            NEXT LEVEL
+            COMPLETE LEVEL
           </button>
-          <button nbButton status="danger" (click)="hypetrain.testStop()" [disabled]="hypetrain.currentLevel === 0">STOP</button>
+          <button nbButton status="danger" (click)="hypetrain.testEnd()" [disabled]="hypetrain.currentLevel === 0 || hypetrain.currentLevel === 5">EXPIRE TRAIN</button>
+          <button nbButton status="danger" (click)="hypetrain.testStop()" [disabled]="hypetrain.currentLevel === 0">EMERGENCY STOP</button>
         </div>
 
         <h2>AUDIO</h2>
         <div class="audio">
           <div>
-            <nb-toggle [(ngModel)]="settings.hypetrain.audio.enabled" (change)="settings.onUpdated()">{{ settings.hypetrain.audio.enabled ? 'ENABLED' : 'DISABLED' }}</nb-toggle>
+            <nb-toggle [(ngModel)]="settings.hypetrain.audio.enabled" (change)="settings.onUpdated()">
+              {{ settings.hypetrain.audio.enabled ? 'ENABLED' : 'DISABLED' }}
+            </nb-toggle>
+          </div>
+          <div>
+            Volume:
+            <mat-slider [(ngModel)]="settings.hypetrain.audio.volume" (change)="settings.onUpdated()" min="0.05" max="1" step="0.05"></mat-slider>
+            {{ settings.hypetrain.audio.volume * 100 | number: '1.0-0' }}%
+          </div>
+          <div>
+            <span nbTooltip="Level 5 isn't reached and the hype train expires" nbTooltipStatus="primary">When hype train fails:</span>
+            <div class="field-container">
+              <input [(ngModel)]="settings.hypetrain.audio.fadingLength" (change)="settings.onUpdated()" nbInput type="number" />
+              <div class="anchor"><label>Fading duration</label></div>
+              <div class="unit">s</div>
+            </div>
+          </div>
+          <div>
+            <span nbTooltip="Level 5 is reached and the last loop plays" nbTooltipStatus="primary">When hype train succeeds:</span>
+            <nb-toggle [(ngModel)]="settings.hypetrain.audio.fadeOnCompletion" (change)="settings.onUpdated()">
+              {{ settings.hypetrain.audio.fadeOnCompletion ? 'ON' : 'OFF' }}
+            </nb-toggle>
           </div>
         </div>
 
         <h2>TRAIN</h2>
-        <div class="train" [class.disabled]="settings.hypetrain.train.enabled">
+        <div class="train" [class.disabled]="!settings.hypetrain.train.enabled">
           <div class="main-toggle">
             <nb-toggle [(ngModel)]="settings.hypetrain.train.enabled" (change)="settings.onUpdated()">{{ settings.hypetrain.train.enabled ? 'ENABLED' : 'DISABLED' }}</nb-toggle>
           </div>
@@ -64,12 +86,12 @@
           <div>
             <div>Anchor (the point there your train starts):&nbsp;</div>
             <div class="field-container">
-              <input nbInput placeholder="0" type="number" />
+              <input nbInput placeholder="0" [(ngModel)]="settings.hypetrain.train.start.x" (change)="settings.onUpdated()" type="number" />
               <div class="anchor"><label>left</label></div>
               <div class="unit">px</div>
             </div>
             <div class="field-container">
-              <input nbInput type="number" placeholder="0" />
+              <input nbInput type="number" [(ngModel)]="settings.hypetrain.train.start.y" (change)="settings.onUpdated()" placeholder="0" />
               <div class="anchor"><label>top</label></div>
               <div class="unit">px</div>
             </div>
@@ -89,8 +111,8 @@
           </div>
         </div>
 
-        <div *ngFor="let part of ['locomotive', 'carriage']" [class]="part">
-          <h2>{{ part.toUpperCase() }}</h2>
+        <div *ngFor="let part of ['locomotive', 'carriage']" [class]="part" [class.disabled]="!settings.hypetrain.train.enabled">
+          <h2>{{ part.toUpperCase() }}&nbsp;&nbsp;<nb-icon icon="question-mark-circle-outline" (click)="openPictureGuide()" class="clickable"></nb-icon></h2>
           <div class="pictures">
             <div class="pictures-column">
               <div class="pictures-uploader">
@@ -115,7 +137,7 @@
                     (change)="settings.onUpdated()"
                     disabled
                     nbInput
-                    placeholder="1"
+                    placeholder="256"
                     type="number"
                     class="input-number"
                   />
@@ -128,7 +150,7 @@
                     (change)="settings.onUpdated()"
                     disabled
                     nbInput
-                    placeholder="1"
+                    placeholder="256"
                     type="number"
                     class="input-number"
                   />
@@ -166,7 +188,8 @@
                     [(ngModel)]="settings.hypetrain.train[part].pictureBounds.width"
                     (change)="settings.onUpdated()"
                     nbInput
-                    placeholder="1"
+                    disabled
+                    placeholder="128"
                     type="number"
                     class="input-number"
                   />
@@ -178,7 +201,8 @@
                     [(ngModel)]="settings.hypetrain.train[part].pictureBounds.height"
                     (change)="settings.onUpdated()"
                     nbInput
-                    placeholder="1"
+                    disabled
+                    placeholder="128"
                     type="number"
                     class="input-number"
                   />
@@ -194,7 +218,7 @@
                     [(ngModel)]="settings.hypetrain.train[part].pictureBounds.left"
                     (change)="settings.onUpdated()"
                     nbInput
-                    placeholder="1"
+                    placeholder="64"
                     type="number"
                     class="input-number"
                   />
@@ -206,7 +230,7 @@
                     [(ngModel)]="settings.hypetrain.train[part].pictureBounds.top"
                     (change)="settings.onUpdated()"
                     nbInput
-                    placeholder="1"
+                    placeholder="64"
                     type="number"
                     class="input-number"
                   />
@@ -234,9 +258,5 @@
           <div></div>
         </div>
       </nb-card-body>
-    </nb-card>
-
-    <button nbButton status="PRIMARY" (click)="startTest()">FULL TEST</button>
-    <button nbButton status="PRIMARY" (click)="stopTest()">STOP TEST</button>
-  </nb-layout-column></nb-layout
->
+    </nb-card> </nb-layout-column
+></nb-layout>
