--- a/src/app/browsersource/hypetrain/hypetrain.component.html
+++ b/src/app/browsersource/hypetrain/hypetrain.component.html
@@ -3,133 +3,7 @@
   class="viewport"
   [ngStyle]="{ width: +settings.viewport.width - +settings.viewport.padding * 2 + 'px', height: +settings.viewport.height - +settings.viewport.padding * 2 + 'px' }"
 >
-  <hypetrain-locomotive
-    *ngIf="settings.hypetrain.train.enabled && hypetrain.currentLevel > 0"
-    [viewport]="settings.viewport"
-    [coordinates]="settings.hypetrain.train.start"
-    [size]="settings.hypetrain.train.locomotive.size"
-    [scale]="hypetrain.currentLocomotiveScale"
-    [pictureBounds]="settings.hypetrain.train.locomotive.pictureBounds"
-    [user]="{ name: 'streamer', picture: hypetrain.channelPic }"
-    [backgroundPic]="settings.hypetrain.train.locomotive.pictures.background"
-    [foregroundPic]="settings.hypetrain.train.locomotive.pictures.foreground"
-    [reverseDirection]="settings.hypetrain.train.reverseDirection"
-    [reverseWrap]="settings.hypetrain.train.reverseWrap"
-  >
-  </hypetrain-locomotive>
+  <hypetrain-locomotive *ngIf="settings.hypetrain.train.enabled && hypetrain.currentLevel > 0" [user]="{ name: 'streamer', picture: hypetrain.channelPic }"> </hypetrain-locomotive>
 
   <div class="viewport-anchor" [ngStyle]="{ width: settings.viewport.width + 'px', height: settings.viewport.height + 'px' }"></div>
-  <div
-    id="cover"
-    [ngStyle]="{
-      left: settings.viewport.width + 'px',
-      width: 1920 - settings.viewport.width + 'px',
-      height: settings.viewport.height + 'px'
-    }"
-  ></div>
-</div>
-
-<div *ngIf="!OBS.isOBS && settings.hypetrain" class="settings mat-typography" [ngStyle]="{ width: settings.viewport.width + 'px' }">
-  <div class="test">
-    <h3>HYPE TRAIN TRACKS</h3>
-    <app-uploader
-      [name]="'hypetrain-track-1'"
-      [displayTextOverride]="'LVL 0->1 TRACK'"
-      [disabled]="!audioLoaded || data.busy || hypetrain.currentLevel > 0"
-      [uploading]="trackUploadingSubject"
-      [uploaded]="trackChangeSubject"
-      [allowedTypes]="['audio']"
-      [height]="'4rem'"
-      [ngStyle]="{ 'margin-bottom': '.2rem' }"
-    ></app-uploader>
-    <button
-      mat-raised-button
-      color="accent"
-      (click)="defaultTrack('hypetrain-track-1')"
-      [disabled]="!settings.hypetrain.audio.tracks[1] || !audioLoaded || hypetrain.currentLevel > 0"
-      [ngStyle]="{ 'margin-bottom': '1rem' }"
-    >
-      DEFAULT
-    </button>
-
-    <app-uploader
-      [name]="'hypetrain-track-2'"
-      [displayTextOverride]="'LVL 1->2 TRACK'"
-      [disabled]="!audioLoaded || data.busy || hypetrain.currentLevel > 0"
-      [uploading]="trackUploadingSubject"
-      [uploaded]="trackChangeSubject"
-      [allowedTypes]="['audio']"
-      [height]="'4rem'"
-      [ngStyle]="{ 'margin-bottom': '.2rem' }"
-    ></app-uploader>
-    <button
-      mat-raised-button
-      color="accent"
-      (click)="defaultTrack('hypetrain-track-2')"
-      [disabled]="!settings.hypetrain.audio.tracks[2] || !audioLoaded || hypetrain.currentLevel > 0"
-      [ngStyle]="{ 'margin-bottom': '1rem' }"
-    >
-      DEFAULT
-    </button>
-
-    <app-uploader
-      [name]="'hypetrain-track-3'"
-      [displayTextOverride]="'LVL 2->3 TRACK'"
-      [disabled]="!audioLoaded || data.busy || hypetrain.currentLevel > 0"
-      [uploading]="trackUploadingSubject"
-      [uploaded]="trackChangeSubject"
-      [allowedTypes]="['audio']"
-      [height]="'4rem'"
-      [ngStyle]="{ 'margin-bottom': '.2rem' }"
-    ></app-uploader>
-    <button
-      mat-raised-button
-      color="accent"
-      (click)="defaultTrack('hypetrain-track-3')"
-      [disabled]="!settings.hypetrain.audio.tracks[3] || !audioLoaded || hypetrain.currentLevel > 0"
-      [ngStyle]="{ 'margin-bottom': '1rem' }"
-    >
-      DEFAULT
-    </button>
-
-    <app-uploader
-      [name]="'hypetrain-track-4'"
-      [displayTextOverride]="'LVL 3->4 TRACK'"
-      [disabled]="!audioLoaded || data.busy || hypetrain.currentLevel > 0"
-      [uploading]="trackUploadingSubject"
-      [uploaded]="trackChangeSubject"
-      [allowedTypes]="['audio']"
-      [height]="'4rem'"
-      [ngStyle]="{ 'margin-bottom': '.2rem' }"
-    ></app-uploader>
-    <button
-      mat-raised-button
-      color="accent"
-      (click)="defaultTrack('hypetrain-track-4')"
-      [disabled]="!settings.hypetrain.audio.tracks[4] || !audioLoaded || hypetrain.currentLevel > 0"
-      [ngStyle]="{ 'margin-bottom': '1rem' }"
-    >
-      DEFAULT
-    </button>
-
-    <app-uploader
-      [name]="'hypetrain-track-5'"
-      [displayTextOverride]="'LVL 4->5(END) TRACK'"
-      [disabled]="!audioLoaded || data.busy || hypetrain.currentLevel > 0"
-      [uploading]="trackUploadingSubject"
-      [uploaded]="trackChangeSubject"
-      [allowedTypes]="['audio']"
-      [height]="'4rem'"
-      [ngStyle]="{ 'margin-bottom': '.2rem' }"
-    ></app-uploader>
-    <button
-      mat-raised-button
-      color="accent"
-      (click)="defaultTrack('hypetrain-track-5')"
-      [disabled]="!settings.hypetrain.audio.tracks[5] || !audioLoaded || hypetrain.currentLevel > 0"
-      [ngStyle]="{ 'margin-bottom': '1rem' }"
-    >
-      DEFAULT
-    </button>
-  </div>
 </div>
