--- a/src/app/browsersource/hypetrain/train/carriage/carriage.component.html
+++ b/src/app/browsersource/hypetrain/train/carriage/carriage.component.html
@@ -2,16 +2,19 @@
   class="anchor"
   [@entry]="entryState"
   (@entry.done)="animationProgress()"
-  [ngStyle]="{ width: (size.width * (scale || 1100)) / 100 + 'px', height: (size.height * (scale || 100)) / 100 + 'px' }"
+  [ngStyle]="{
+    width: (settings.hypetrain.train[type].size.width * (hypetrain.currentCarriageScale || 1100)) / 100 + 'px',
+    height: (settings.hypetrain.train[type].size.height * (hypetrain.currentCarriageScale || 100)) / 100 + 'px'
+  }"
 >
   <div
     class="container"
     [@shake]="shakeState"
     (@shake.done)="shakeState = +shakeState + 1 === shakeKeyframes ? 0 : +shakeState + 1"
     [ngStyle]="{
-      width: (size.width * (scale || 100)) / 100 + 'px',
-      height: (size.height * (scale || 100)) / 100 + 'px',
-      'background-image': backgroundPic ? 'url(' + backgroundPic + '#)' : ''
+      width: (settings.hypetrain.train[type].size.width * (hypetrain.currentCarriageScale || 100)) / 100 + 'px',
+      height: (settings.hypetrain.train[type].size.height * (hypetrain.currentCarriageScale || 100)) / 100 + 'px',
+      'background-image': settings.hypetrain.train[type].pictures.background ? 'url(' + settings.hypetrain.train[type].pictures.background + '#)' : 'url(carriage-outer.png)'
     }"
   >
     <img
@@ -27,11 +30,11 @@
     <div
       class="top"
       [ngStyle]="{
-        top: (pictureBounds.top! * scale) / 100 + 'px',
-        width: (pictureBounds.width! * scale) / 100 + 'px',
-        left: (pictureBounds.left! * scale) / 100 + 'px',
-        height: (pictureBounds.height! * scale) / 100 + 'px',
-        'background-image': foregroundPic ? 'url(' + foregroundPic + '#)' : ''
+        top: (settings.hypetrain.train[type].pictureBounds.top! * hypetrain.currentCarriageScale) / 100 + 'px',
+        width: (settings.hypetrain.train[type].pictureBounds.width! * hypetrain.currentCarriageScale) / 100 + 'px',
+        left: (settings.hypetrain.train[type].pictureBounds.left! * hypetrain.currentCarriageScale) / 100 + 'px',
+        height: (settings.hypetrain.train[type].pictureBounds.height! * hypetrain.currentCarriageScale) / 100 + 'px',
+        'background-image': settings.hypetrain.train[type].pictures.foreground ? 'url(' + settings.hypetrain.train[type].pictures.foreground + '#)' : 'url(carriage-inner.png)'
       }"
     ></div>
   </div>
