--- a/src/app/dashboard/twitch/hypetrain/hypetrain.component.scss
+++ b/src/app/dashboard/twitch/hypetrain/hypetrain.component.scss
@@ -10,30 +10,27 @@
   display: none;
 }
 
-.test {
-  margin: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+/* MONITOR & TEST */
+.monitor {
+  margin-top: 2rem;
+  margin-bottom: 3rem;
 }
-
-nb-card-body > h2,
-nb-card-body > h3 {
-  text-align: center;
-}
-
 .test {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 2rem;
+  margin: 1rem;
+
+  padding: 1rem;
+  background-color: #ffffff26;
+  border-radius: 0.5rem;
 }
 
-.audio,
-.tracks,
+/* TRAIN */
 .train,
-.locomotive,
-.carriage {
+.locomotive2,
+.carriage2 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -64,25 +61,77 @@ nb-card-body > h3 {
   }
 }
 
-.uploader {
-  position: relative;
-  > button {
-    position: absolute;
-    right: -1rem;
-    bottom: -1rem;
-    z-index: 4;
-  }
-}
-
-.monitor {
+.train,
+.locomotive2,
+.carriage2 {
   margin-top: 2rem;
 }
-.monitor,
-.test,
-.audio,
-.tracks,
-.train {
-  margin-bottom: 5rem;
+
+.train-outer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0;
+
+  > .train-inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+
+    > .row {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 2.5rem;
+    }
+  }
+
+  > .train-double {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    > .locomotive,
+    > .carriage {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      > div {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+      }
+
+      > .pictures {
+        align-items: flex-start;
+        justify-content: center;
+        margin-left: 2rem;
+        margin-right: 2rem;
+        flex-wrap: wrap;
+
+        > .pictures-column {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+          align-items: center;
+          > .pictures-row {
+            display: flex;
+            gap: 2rem;
+            justify-content: center;
+            align-items: center;
+            margin-top: 1rem;
+          }
+          > .field-container {
+            margin-top: 1rem;
+          }
+        }
+      }
+    }
+  }
 }
 
 .guide {
@@ -107,10 +156,52 @@ nb-card-body > h3 {
   }
 }
 
+/* AUDIO */
+.audio-outer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 2rem;
+
+  > .audio-inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+
+    > div {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+    }
+
+    > h3 {
+      margin: 0;
+    }
+    .tracks {
+      gap: 0.5rem;
+      flex-direction: column;
+    }
+  }
+}
+
+/* GLOBAL */
 .disabled {
   > *:not(.main-toggle) {
     opacity: 0.7;
     filter: grayscale(0.7);
     pointer-events: none;
+  }
+}
+
+.uploader {
+  position: relative;
+  > button {
+    position: absolute;
+    right: -1rem;
+    bottom: -1rem;
+    z-index: 4;
   }
 }
